# atlas-crypto-observatory

./: .env.example  .gitignore  CHANGELOG.md  CONSTITUTION.md  README.md  pyproject.toml
src/atlas/: __init__.py  cli.py
src/atlas/adapters/: __init__.py  base.py
src/atlas/adapters/deribit/: __init__.py  adapter.py  auth.py  client.py  constants.py  discovery.py  (+3 more)
src/atlas/bus/: __init__.py  event_bus.py
src/atlas/config/: __init__.py  settings.py
src/atlas/core/: __init__.py  capabilities.py  clocks.py  envelope.py  instrument.py  provenance.py  taxonomy.py
src/atlas/evidence/: __init__.py  builder.py  observation.py
src/atlas/logging/: __init__.py  setup.py
src/atlas/pipeline/: __init__.py  pipeline.py
src/atlas/recording/: __init__.py  health.py  live.py  metadata.py  status.py
src/atlas/replay/: __init__.py  cursor.py  engine.py  manifest.py
src/atlas/storage/: __init__.py  archive.py  archive_state.py  integrity.py  jsonl_sink.py  manifest.py  reader.py  sink.py
tests/: test_archive_state.py  test_capabilities.py  test_deribit_adapter.py  test_deribit_auth.py  test_deribit_client.py  test_deribit_discovery.py  test_deribit_instruments.py  test_deribit_messages.py  test_deribit_subscription.py  test_envelope.py  test_event_bus.py  test_gap_detection.py  test_integration_deribit.py  test_jsonl_sink.py  test_live_recording.py  test_observation.py  test_pipeline_integration.py  test_recording_health.py  test_recording_metadata.py  test_replay_cursor.py  test_replay_engine.py  test_replay_fidelity.py  test_replay_storage.py  test_session_status.py
