[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-mer"
version = "0.3.0"
description = "ATLAS Market Event Recorder — evidence pipeline for immutable market data capture and replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "ATLAS" }]
keywords = ["market-data", "event-sourcing", "deribit", "observatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "ruff>=0.9",
]

[project.scripts]
atlas = "atlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.hatch.build.targets.sdist]
only-include = ["src/atlas", "README.md", "LICENSE", "CHANGELOG.md", "CONSTITUTION.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["atlas"]
mypy_path = "src"
